--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
+        - ruby: 2.6.6
+          gemfile: Gemfile
         - ruby: 2.7.2
+          gemfile: Gemfile
+        - ruby: 3.0.1
           gemfile: Gemfile
     env:
       BUNDLE_GEMFILE: "${{ matrix.gemfile }}"
