--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
     - master
+  workflow_dispatch:
+    branches:
+    - master  
 jobs:
   test:
     runs-on: ubuntu-20.04
