--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,16 +20,19 @@ jobs:
         include:
         - ruby: 2.7.2
           gemfile: Gemfile
+          capybara_driver: selenium
         - ruby: 3.2.0
           gemfile: Gemfile
+          capybara_driver: selenium
         - ruby: 3.4.1
           gemfile: Gemfile
+          capybara_driver: selenium
         - ruby: 3.4.1
           gemfile: Gemfile
           capybara_driver: cuprite
     env:
       BUNDLE_GEMFILE: "${{ matrix.gemfile }}"
-      CAPYBARA_DRIVER: "${{ matrix.capybara_driver || 'selenium' }}"
+      CAPYBARA_DRIVER: "${{ matrix.capybara_driver }}"
     steps:
     - uses: actions/checkout@v3
     - name: Install Chrome
@@ -38,6 +41,7 @@ jobs:
       run: chrome --version
     - name: Install ChromeDriver
       uses: nanasess/setup-chromedriver@master
+      if: "${{ matrix.capybara_driver == 'selenium' }}"
     - name: Install ruby
       uses: ruby/setup-ruby@v1
       with:
@@ -49,6 +53,6 @@ jobs:
     - name: Run tests
       uses: nick-invision/retry@v2
       with:
-        timeout_seconds: 30
+        timeout_seconds: 60
         max_attempts: 3
         command: bundle exec rake spec
